# Platformski-Nezavisno-Programiranje

./: PNP_Firmware.cpp  PlatformskoDrugaVjezba.cpp  README.md
libTest/: .CMakeLists.txt.kate-swp  CMakeLists.txt  libTest.kdev4  main.cpp
libTest/.kdev4/: _custom.kdev4  libTest.kdev4
libTestSharedLinux/: CMakeLists.txt  libTestSharedLinux.kdev4  main.cpp
libTestSharedLinux/libDirectory/: CMakeCache.txt  Makefile  cmake_install.cmake  libtestsharedlinux
libTestSharedLinux/libDirectory/libDirectory/: Makefile  cmake_install.cmake
newLibrary/: CMakeLists.txt  main.cpp  newLibrary.kdev4
newLibrary/.kdev4/: newLibrary.kdev4
newLibrary/actualLibrary/: CMakeLists.txt  actuallibrary.cpp  actuallibrary.h  dlldefines.h
newLibrary/buildVisual/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  newlibrary.sln  newlibrary.vcxproj  newlibrary.vcxproj.filters
newLibrary/buildVisual/Debug/: newlibrary.ilk
newLibrary/buildVisual/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
newLibrary/buildVisual/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  (+3 more)
newLibrary/buildVisual/actualLibrary/: INSTALL.vcxproj  INSTALL.vcxproj.filters  actualLibrary.vcxproj  actualLibrary.vcxproj.filters  cmake_install.cmake
newLibrary/buildVisual/actualLibrary/Debug/: actualLibrary.exp  actualLibrary.ilk  actualLibrary.lib
newLibrary/buildVisual/newlibrary.dir/Debug/newlibrary.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
newLibrary/buildVisual2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  actualLibrary.vcxproj  actualLibrary.vcxproj.filters  actuallibrary.cpp  actuallibrary.h  cmake_install.cmake  dlldefines.h
newLibrary/buildVisual2/Debug/: actualLibrary.exp  actualLibrary.ilk  actualLibrary.lib
newLibrary/buildVisual2/actualLibrary.dir/Debug/: objects.txt
newLibrary/buildVisual2/actualLibrary.dir/Debug/actualLibrary.tlog/: CL.read.1.tlog  CL.write.1.tlog  actualLibrary.write.1u.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
newLibrary/buildVisual2/actualLibrary.dir/MinSizeRel/: objects.txt
newLibrary/buildVisual2/actualLibrary.dir/RelWithDebInfo/: objects.txt
newLibrary/buildVisual2/actualLibrary.dir/Release/: objects.txt
newLibrary/usingLibrary/: usingLibrary.sln
newLibrary/usingLibrary/Debug/: actualLibrary.exp  actualLibrary.ilk  actualLibrary.lib  usingLibrary.ilk
newLibrary/usingLibrary/usingLibrary/: actuallibrary_export.h  dlldefines.h  libraryUser.cpp  usingLibrary.vcxproj  usingLibrary.vcxproj.filters
newLibrary/usingLibrary/usingLibrary/Debug/: vc120.idb
newLibrary/usingLibrary/usingLibrary/Debug/usingLibrary.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  usingLibrary.lastbuildstate
platformsko/: CMakeLists.txt  main.cpp  platformsko.kdev4
platformsko/.kdev4/: _custom.kdev4  platformsko.kdev4
platformsko/include/: CMakeLists.txt  lib.cpp  lib.h
platformsko/library_test/: CMakeLists.txt
platformsko/library_test/unit_test/: CMakeLists.txt  libtest.cpp  libtest.h  main.cpp
platformsko/visualStudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  platformsko.sln  platformsko.vcxproj  platformsko.vcxproj.filters
platformsko/visualStudio/include/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  include.vcxproj  include.vcxproj.filters
platformsko/visualStudio/include/Debug/: include.ilk
platformsko/visualStudio/library_test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
platformsko/visualStudio/library_test/gtest/tmp/: gtest-cfgcmd.txt
platformsko/visualStudio/library_test/unit_test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unitTest.vcxproj  unitTest.vcxproj.filters
platformsko/visualStudio/platformsko.dir/Debug/platformsko.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
(+117 files in other folders)
