cmake_minimum_required(VERSION 3.0)
project(newlibrary)

if(UNIX)
    message(STATUS "this is unix")
     if(CMAKE_COMPILER_IS_GNUCXX)
         message(STATUS "this is GCC")
         add_definitions(-Wall)
         add_definitions(-Wextra)
         add_definitions(-pedantic)
     endif()
elseif(WINDOWS)
    if(MSVC)
        set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} /SUBSYSTEM:WINDOWS /W4")
    elseif(CMAKE_COMPILER_IS_GNUCXX)
        #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
        add_definitions(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
    else()
        message(ERROR "(Not MSVC or GCC)")
    endif()
    # set_target_properties(name_of_my_project PROPERTIES COMPILER_FLAGS "/EHsc")
    message(STATUS "this is windows")
endif()

add_subdirectory(actualLibrary)

add_executable(newlibrary main.cpp)

install(TARGETS newlibrary RUNTIME DESTINATION bin)
